Temporary fix the overspilling on the right issue

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,5 @@
 @value shared: "styles/shared.css";
-@value secondary-colour from shared;
+@value primary-colour from shared;
 *,
 *:before,
 *:after {
@@ -10,10 +10,12 @@
 html {
   box-sizing: border-box;
   /* todo: fm - make backgound banner / footer black so that when you over scroll the blue doesn't show through*/
-  background-color: secondary-colour;
+  background-color: primary-colour;
 }
 
 body {
+  width: 100vw;
+  height: 100vh;
   margin: 0;
 }
 
@@ -31,4 +33,10 @@ a {
 
 a {
   text-decoration: none;
+}
+
+/* debug: fm - this has been done to spot overspilling on the right. */
+img,
+hr {
+  width: 40vw;
 }
